<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/drawer_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile"/>
    <item
        android:id="@+id/drawer_MyEvents"
        android:icon="@drawable/events_icon"
        android:title="@string/my_events"/>
    <item
        android:id="@+id/drawer_teamtechspardha"
        android:icon="@drawable/drawerlogo"
        android:title="@string/team_techspardha"/>
    <item
        android:id="@+id/drawer_aboutus"
        android:icon="@drawable/ic_info"
        android:title="@string/about_us"/>
    <item
        android:id="@+id/drawer_developers"
        android:icon="@drawable/dev_icon"
        android:title="@string/developers"/>
</menu>